--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 </div><div class="wulol67cc975af2646a38 box widget" id="divComments">
 <div class="wulol975af2646a38ff8d title">最新留言</div><ul></ul>
 </div><div class="wulolf2646a38ff8dd42d box widget" id="divLinkage">
-<div class="wulol6a38ff8dd42d5dde title">友情链接</div><ul><li><a href="https://github.com/zblogcn" target="_blank" title="Z-Blog on Github">Z-Blog on Github</a></li></ul>
+<div class="wulol6a38ff8dd42d5dde title">友情链接</div>
+<ul><li><a href="https://github.com/zblogcn" target="_blank" title="Z-Blog on Github">Z-Blog on Github</a></li></ul>
+<ul><li><a href="https://haijiaoshem.pages.dev" target="_blank" title="海角</a></li></ul>
 </div><div class="wulolff8dd42d5dde9b62 box widget" id="divCatalog">
 <div class="wulold42d5dde9b621fa9 title">网站分类</div><ul><li><a title="便民导航" href="category-1.html">便民导航</a></li>
 <li><a title="人物作品" href="category-2.html">人物作品</a></li>
